add field - platforms
Signed-off-by: fufesou <shuanglongchen@yeah.net>

--- a/meta.toml
+++ b/meta.toml
@@ -6,6 +6,7 @@ id = "RustDesk.c.privacy-mode"
 name = "Privacy Mode"
 version = "v0.1.0"
 description = "This plugin can enable private mode to prevent others from seeing your operations."
+platforms = "Windows"
 author = "RustDesk"
 home = ""
 license = "MIT"
