split supported platforms
Signed-off-by: fufesou <shuanglongchen@yeah.net>

--- a/meta.toml
+++ b/meta.toml
@@ -6,7 +6,6 @@ id = "RustDesk.c.privacy-mode"
 name = "Privacy Mode"
 version = "v0.1.0"
 description = "This plugin can enable private mode to prevent others from seeing your operations."
-platforms = "Windows"
 author = "RustDesk"
 home = ""
 license = "MIT"
@@ -15,3 +14,8 @@ source = ""
 [plugins.publish_info]
 published = "2023-05-07 14:00:00"
 last_released = "2023-05-07 14:00:00"
+
+[plugins.platforms]
+# control means the control side.
+# controlled means the controled side.
+controlled = "windows"
